# bazelTest

./: WORKSPACE.bazel
project/: BUILD.bazel  calculator.py  calculator_test.py
