load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:defs.bzl", "py_test")



py_library(
    name = "calculator",
    srcs = ["calculator.py"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
       deps = [
        "//project:calculator",
    ],
)
